--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,11 @@
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
+        "symfony/form": "4.4.*",
         "symfony/framework-bundle": "4.4.*",
+        "symfony/maker-bundle": "^1.14",
+        "symfony/orm-pack": "^1.0",
+        "symfony/twig-bundle": "4.4.*",
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
