--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,3 +25,8 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\Services\CustomService:
+        arguments:
+            $upload_director: '%uploads_director%'
+            $random_array: ['Rakesh', 'Sonam', 'Poonam', 'Sonu']
